# Code-used-on-Daniel-Lemire-s-blog

2018/07/05/: CMakeLists.txt  Makefile  dotproduct.cpp
